@@ -10,10 +10,10 @@
 
     In contrary to HP&apos;s HPIJS this driver contributed by Hin-Tak
     Leung (also author of the drivers for Epson&apos;s EPL "L" laser
-    printers) supports all printout qualities which the Windos driver
-    provides for the HP Color LaserJet 35xx/36xx. The development of
-    this driver is not supported by HP, it is an independent
-    project.&lt;p&gt;
+    printers) supports without any proprietary plug-ins all printout
+    qualities which the Windows driver provides for the HP Color
+    LaserJet 35xx/36xx. The development of this driver is not
+    supported by HP, it is an independent project.&lt;p&gt;
 
     Cited from the driver&apos;s home page:&lt;p&gt;
 
@@ -46,6 +46,22 @@
     installing both HPIJS and PXLJR simultaneously.&lt;/i&gt;&lt;p&gt;
 
     [...]&lt;p&gt;
+
+    Note that this driver has two bugs:&lt;p&gt;
+
+    The first bug is that double-sided printing (duplex) does not
+    work. For this a &lt;a
+    href="http://www.openprinting.org/download/printing/pxljr-patches/duplex.patch"&gt;patch&lt;/a&gt;
+    from Till Kamppeter is a available.&lt;p&gt;
+
+    The second bug is a problem of color output. In the draft and
+    normal quality modes some color tones are not printed and come out
+    white instead. The problem does not occur in the high quality
+    mode. The bug was reported to the &lt;a
+    href="https://bugs.launchpad.net/ubuntu/+source/pxljr/+bug/228635"&gt;Ubuntu
+    bug tracking system&lt;/a&gt;.&lt;p&gt;
+					 
+    Both bugs are reported to the driver's author.&lt;p&gt;
 
     As the PPD file is available on the driver&apos;s web site, we
     will not provide PPD files here at OpenPrinting. Note that
