@@ -1,3 +1,8 @@
+2008-10-26  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/pxljr.xml: Added information about known bugs and a link
+	  to a fix for the duplex printing support.
+
 2008-10-23  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/HP-Officejet_K7100.xml, printer/HP-OfficeJet_K7100.xml:
